Added caching and content loading to the API
