# src/api/article.rs
@@ -1,27 +1,8 @@
+use crate::models::{Article, DATE_FORMAT};
 use crate::{dlf, DbConn};
-use diesel::{ExpressionMethods, QueryDsl, Queryable, RunQueryDsl, Table};
+use diesel::{ExpressionMethods, QueryDsl, RunQueryDsl, SelectableHelper, Table};
 use rocket::{http::Status, serde::json::Json};
-use serde::Serialize;
-use time::{macros::format_description, Date, PrimitiveDateTime};
-
-#[derive(Serialize, Debug, Queryable)]
-pub struct Article {
-    key: String,
-    title: String,
-    teaser_headline: String,
-    teaser_text: String,
-    date: PrimitiveDateTime,
-    locale_date: String,
-    kicker: Option<String>,
-    description: Option<String>,
-    content: Option<String>,
-    category: Option<String>,
-    /// 0: Uncategorized
-    /// 1: Accepted
-    /// 2: Demoted, do not print (can be deleted)
-    /// 3: Bullet Points have been created and the text is in the print_articles
-    status: i32,
-}
+use time::Date;
 
 #[get("/get/first?<date>")]
 pub async fn get_first_article(
@@ -30,14 +11,14 @@ pub async fn get_first_article(
 ) -> Result<Json<Article>, Status> {
     use crate::schema::articles::dsl;
 
-    let article = match date {
+    let mut article = match date {
         Some(article_date) => {
-            let format = format_description!("[year]-[month]-[day]");
-            let article_date = Date::parse(&article_date, &format).unwrap();
+            let article_date = Date::parse(&article_date, &DATE_FORMAT).unwrap();
             conn.run(move |c| {
                 dsl::articles
                     .select(dsl::articles::all_columns())
                     .filter(diesel::dsl::date(dsl::date).eq(article_date))
+                    .select(Article::as_select())
                     .first::<Article>(c)
                     .map_err(|_| Status::NotFound)
             })
@@ -46,25 +27,48 @@ pub async fn get_first_article(
         None => {
             conn.run(|c| {
                 dsl::articles
-                    .select(dsl::articles::all_columns())
+                    .select(Article::as_select())
                     .first::<Article>(c)
                     .map_err(|_| Status::NotFound)
             })
             .await?
         }
     };
-    let parsed_article = dlf::article(&format!("{}{}", dlf::PREFIX, &article.key))
-        .await
-        .unwrap();
-    let article_key = article.key.clone();
-    if article.key != parsed_article.key {
-        conn.run(move |c|
-            // Article has been updated and moved! Work with the newer version and discard the older one!
-            diesel::update(dsl::articles.filter(dsl::key.eq(&article_key)))
-                .set(dsl::status.eq(2))
-                .execute(c)
-                .map_err(|_| Status::InternalServerError))
+    if article.content.is_some() {
+        info!("Found article with key '{}' in cache.", article.key);
+    } else {
+        info!(
+            "Article with key '{}' had no content in the database. Updating...",
+            article.key
+        );
+
+        let parsed = dlf::article(&format!("{}{}", dlf::PREFIX, &article.key))
+            .await
+            .unwrap();
+
+        article.merge(&parsed);
+
+        // Sometimes the urls (keys) change, so we no longer need the old article.
+        // This can happen if the title of the article is changed, for example.
+        if parsed.key != article.key {
+            let old_key = article.key.clone();
+            conn.run(move |c| {
+                diesel::delete(dsl::articles.filter(dsl::key.eq(&old_key)))
+                    .execute(c)
+                    .map_err(|_| Status::InternalServerError)
+            })
             .await?;
+            article.key = parsed.key.clone();
+        }
+
+        let updated_article = article.clone();
+        conn.run(move |c| {
+            diesel::update(dsl::articles.find(&updated_article.key))
+                .set(&updated_article)
+                .execute(c)
+                .map_err(|_| Status::InternalServerError)
+        })
+        .await?;
     }
 
     Ok(Json(article))
